--- a/templates/config-wb-mrwm2.json.jinja
+++ b/templates/config-wb-mrwm2.json.jinja
@@ -587,8 +587,7 @@
             {% endfor -%}
             {% for out_num in range(1, OUTPUTS_NUMBER + 1) -%}
             {
-                "name": "Desired State K{{out_num}}",
-                "id": "K{{out_num}}",
+                "name": "K{{out_num}}",
                 "reg_type": "coil",
                 "address": {{out_num - 1}},
                 "type": "switch",
@@ -777,6 +776,10 @@
                 "secp_waiting_time_description": "If there is no second press during the specified time then press is single. 0 - disables all presses except short and long. Adds a delay to the response to a short press",
                 "debounce_time_description": "For press detection must be 5-10 times less than second press waiting time. Adds a delay to the response to presses. Firmware up to 1.19.0 supports maximum 250 ms",
 
+                {% for out_num in range(1, OUTPUTS_NUMBER + 1) -%}
+                "K{{out_num}}": "Desired State K{{out_num}}",
+                {% endfor -%}
+
                 "undervoltage_description": "120 to 220, factory default - 207",
                 "overvoltage_description": "230 to 277, factory default - 253",
                 "voltage_dip_duration_description": "0.5 to 10, factory default - 5",
@@ -798,7 +801,7 @@
 
                 "Outputs": "Выходы",
                 "Safety Mode": "Безопасный режим",
-                "Voltage control": "Контроль напряжения",
+                "Voltage Control": "Контроль напряжения",
                 "General": "Общее",
                 "HW Info": "Данные модуля",
                 "Debug": "Диагностика",
@@ -808,15 +811,15 @@
                 "Actions for outputs when the input is closed / opened": "Действия для выходов при замыкании / размыкании входа",
 
                 {% for out_num in range(1, OUTPUTS_NUMBER + 1) -%}
+                "K{{out_num}}": "Желаемое состояние K{{out_num}}",
                 "Output {{out_num}}": "Выход {{out_num}}",
                 "Output {{out_num}} Actions": "Действия для выхода {{out_num}}",
                 "Voltage Control Parameters for Output {{out_num}}": "Параметры контроля напряжения для выхода {{out_num}}",
-                "Desired state K{{out_num}}": "Желаемое состояние канала K{{out_num}}",
-                "Physical state K{{out_num}}": "Физическое состояние канала K{{out_num}}",
-                "Voltage state K{{out_num}}": "Статус напряжения канала K{{out_num}}",
-                "Protection state K{{out_num}}": "Статус блокировки канала K{{out_num}}",
-                "Startup delay countdown K{{out_num}}": "Задержка включения K{{out_num}}",
-                "Restart delay countdown K{{out_num}}": "Задержка повторного включения K{{out_num}}",
+                "Physical State K{{out_num}}": "Физическое состояние K{{out_num}}",
+                "Voltage State K{{out_num}}": "Статус напряжения K{{out_num}}",
+                "Protection State K{{out_num}}": "Статус блокировки K{{out_num}}",
+                "Startup Delay Countdown K{{out_num}}": "Задержка включения K{{out_num}}",
+                "Restart Delay Countdown K{{out_num}}": "Задержка повторного включения K{{out_num}}",
                 {% endfor -%}
 
                 "Output Safe State": "Безопасное состояние выходов",
@@ -891,12 +894,12 @@
                 "Disable in safety mode": "Блокировать в безопасном режиме",
                 "Enable only in safety mode": "Разрешить только в безопасном режиме",
 
-                "Voltage control activation": "Функция контроля напряжения",
-                "Undervoltage threshold (V)": "Нижний допустимый предел напряжения (В)",
-                "Overvoltage threshold (V)": "Верхний допустимый предел напряжения (В)",
-                "Voltage dip duration (s)": "Допустимая длительность провала напряжения (с)",
-                "Startup delay (s)": "Задержка включения нагрузки (с)",
-                "Restart delay (s)": "Задержка повторного включения нагрузки (с)",
+                "Voltage Control Activation": "Функция контроля напряжения",
+                "Undervoltage Threshold (V)": "Нижний допустимый предел напряжения (В)",
+                "Overvoltage Threshold (V)": "Верхний допустимый предел напряжения (В)",
+                "Voltage Dip Duration (s)": "Допустимая длительность провала напряжения (с)",
+                "Startup Delay (s)": "Задержка включения нагрузки (с)",
+                "Restart Delay (s)": "Задержка повторного включения нагрузки (с)",
                 "Disable": "Не активна",
                 "Enable": "Активна",
                 "NORMAL": "В НОРМЕ",
