Add min core voltage reg for m1w2 (#777)

--- a/templates/config-wb-m1w2-buttons.json.jinja
+++ b/templates/config-wb-m1w2-buttons.json.jinja
@@ -320,6 +320,16 @@
                 "units": "V",
                 "enabled": false,
                 "group": "g_hw_info"
+            },
+            {
+                "name": "Minimum MCU Voltage Since Startup",
+                "reg_type": "input",
+                "address": 119,
+                "scale": 0.001,
+                "type": "value",
+                "units": "V",
+                "enabled": false,
+                "group": "g_hw_info"
             }
         ],
         "translations": {
@@ -386,7 +396,8 @@
                 "Uptime": "Время работы с момента включения",
                 "Minimum Voltage Since Startup": "Минимальное напряжение с момента включения",
                 "MCU Temperature": "Температура МК",
-                "MCU Voltage": "Напряжение питания МК"
+                "MCU Voltage": "Напряжение питания МК",
+                "Minimum MCU Voltage Since Startup": "Минимальное напряжение питания МК с момента включения"
             }
         }
     }
