WB-MAI6 template: remove fw version

--- a/templates/config-wb-mai6.json.jinja
+++ b/templates/config-wb-mai6.json.jinja
@@ -22,8 +22,7 @@
 {% if has_signature %}
     "hw": [
         {
-            "signature": "WBMAI6",
-            "fw": "2.1.0"
+            "signature": "WBMAI6"
         }
     ],
 {% endif %}
