--- a/templates/config-wb-mao4-20ma.json.jinja
+++ b/templates/config-wb-mao4-20ma.json.jinja
@@ -214,7 +214,8 @@
                 "reg_type": "holding",
                 "address": {{index}},
                 "type": "range",
-                "max": 10000,
+                "max": 100,
+                "scale": 0.1,
                 "group": "gg_output_{{index + 1}}_channels"
             },
             {% endfor -%}
